--- a/main.css
+++ b/main.css
@@ -795,9 +795,10 @@ textarea {
   }
 }
 
-@media screen and (max-width: 700px) and (min-width: 430px) {
+@media screen and (max-width: 750px) and (min-width: 430px) {
   .navbar {
     display: flex;
+    justify-content: space-between;
   }
 
   .links {
@@ -826,7 +827,7 @@ textarea {
   }
 
   .column-container {
-    padding-left: 50px;
+    padding-left: 0px;
   }
 
   .cards {
