--- a/main.css
+++ b/main.css
@@ -189,12 +189,13 @@ h2 {
   color: black;
   text-align: center;
   padding: 18px 0 18px 0;
-  margin: 0 0 0px 0;
+  margin: 25px 0 0px 0;
 }
 
 h2 span {
   border: 4px dashed #da123e;
   padding: 10px;
+  border-radius: 5px;
 }
 
 p {
